ecephys_session notebook update

--- a/doc_template/examples_root/examples/nb/ecephys_session.ipynb
+++ b/doc_template/examples_root/examples/nb/ecephys_session.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,14 +1207,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "session_id = 756029989 # for example\n",
+    "session_id = 732592105 # for example\n",
     "session = cache.get_session_data(session_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This ecephys session '732592105' has no eye tracking data. (NWB error: \"'eye_tracking' not found in modules of NWBFile 'root'\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "session.get_pupil_data()"
    ]
   },
   {
