close div tag in ecephys lfp nb

--- a/doc_template/examples_root/examples/nb/ecephys_lfp_analysis.ipynb
+++ b/doc_template/examples_root/examples/nb/ecephys_lfp_analysis.ipynb
@@ -643,7 +643,9 @@
     "\n",
     "### Suggestions for further analysis\n",
     "\n",
-    "* Can you use supervised learning to train a model to accurately identify brain regions based on LFP signals alone? What happens when you use this model to classify brain regions in recordings without CCF registration?\n"
+    "* Can you use supervised learning to train a model to accurately identify brain regions based on LFP signals alone? What happens when you use this model to classify brain regions in recordings without CCF registration?\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -1118,7 +1120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
