GH 1357: Project caches should not accept arbitrary kwargs
Accepting arbitrary kwargs led to confusion for scientists
accidentally passing incorrect keywords. This PR removes
the ability to pass arbitrary kwargs to public Project cache
constructors, to reduce the possibility of silent errors.

--- a/doc_template/examples_root/examples/internal/Lims Behavior Project Cache.ipynb
+++ b/doc_template/examples_root/examples/internal/Lims Behavior Project Cache.ipynb
@@ -892,7 +892,7 @@
    ],
    "source": [
     "# But it will work if we use one that already exists\n",
-    "cache.get_session_data(978244684, fixed=True)"
+    "cache.get_session_data(latest.name, fixed=True)"
    ]
   },
   {
