Updated the examples with more documentation

--- a/doc_template/examples_root/examples/biophysical_sim/biophysical_sim.ipynb
+++ b/doc_template/examples_root/examples/biophysical_sim/biophysical_sim.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from allensdk.model.biophysical import runner,_schemas\n",
+    "from allensdk.model.biophysical import runner\n",
     "import json\n",
     "import os\n",
     "from argschema import ArgSchemaParser\n",
@@ -133,17 +133,14 @@
     }
    ],
    "source": [
-    "sdk_model_templates = {491455321:'all_active',329230710:'perisomatic'}\n",
+    "sdk_model_templates = {'all_active':491455321,'perisomatic':329230710}\n",
     "bp = BiophysicalApi()\n",
     "bp.cache_stimulus = True \n",
-    "model_list = bp.get_neuronal_models(cell_id)\n",
-    "model_dict = {}\n",
-    "for model_dict_ in model_list:\n",
-    "    if model_dict_['neuronal_model_template_id'] in sdk_model_templates.keys():\n",
-    "        model_dict[sdk_model_templates[model_dict_['neuronal_model_template_id']]] = model_dict_['id']\n",
+    "model_list = bp.get_neuronal_models(cell_id,model_type_ids=[sdk_model_templates['all_active']])\n",
+    "model_dict = model_list[0]\n",
     "\n",
     "model_dir = 'all_active_models'\n",
-    "bp.cache_data(model_dict['all_active'], working_directory=model_dir)\n",
+    "bp.cache_data(model_dict['id'], working_directory=model_dir) \n",
     "new_model_file = 'fit_parameters_new.json'\n",
     "shutil.copyfile(new_model_file,os.path.join(model_dir,new_model_file))\n",
     "copytree('modfiles',os.path.join(model_dir,'modfiles'))\n"
@@ -252,7 +249,7 @@
     "    manifest_dict['runs'][0]['sweeps_by_type'] = {\"Long Square\":[sweep_num]}\n",
     "json.dump(manifest_dict,open(manifest_file,'w'),indent=2) \n",
     "\n",
-    "schema_legacy = dict(manifest_file=manifest_file,log_level = 'INFO',axon_type = None)\n",
+    "schema_legacy = dict(manifest_file=manifest_file)\n",
     "runner.run(schema_legacy,procs=1,sweeps=[sweep_num])\n"
    ]
   },
@@ -367,7 +364,7 @@
     "manifest_dict['biophys'][0]['model_file'] = [new_manifest_file,new_model_file]\n",
     "json.dump(manifest_dict,open(new_manifest_file,'w'),indent=2)  \n",
     "\n",
-    "schema_new = dict(manifest_file=new_manifest_file,log_level = 'INFO', axon_type = 'stub_axon')\n",
+    "schema_new = dict(manifest_file=new_manifest_file,axon_type = 'stub_axon')\n",
     "runner.run(schema_new,procs=1,sweeps=[sweep_num])\n"
    ]
   },
