Update BehaviorProjectCache internal example notebook
Update descriptive text to reflect changes in object

Pull new data to get the additional columns in the
behavior session summary table

--- a/doc_template/examples_root/examples/internal/Lims Behavior Project Cache.ipynb
+++ b/doc_template/examples_root/examples/internal/Lims Behavior Project Cache.ipynb
@@ -8,7 +8,7 @@
     "A short introduction to analyzing the Visual Behavior data.\n",
     "This notebook uses the LIMS API to access data, so it will only work on the Allen Institute network.\n",
     "\n",
-    "Please note that local caching functionality has not been implemented, as there are currently no NWB files for these data. Because the data may change over time, whenever a Session object is created through the cache, we note when the data were accessed in a session log."
+    "Please note that local caching functionality has not been implemented, as there are currently no NWB files for these data. Currently the `BehaviorProjectCache` acts as an interface to query for all experiments/sessions in the LIMS database, and to produce `BehaviorDataSession` and/or `BehaviorOphysSession` objects (using `get_session_data` and `get_behavior_session_data`, respectively)."
    ]
   },
   {
@@ -58,21 +58,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Getting all ophys sessions. This might take a while.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "array(['VisualBehaviorMultiscope', 'VisualBehavior',\n",
-       "       'VisBIntTestDatacube', 'VisualBehaviorTask1B', 'VisBehNeuroModAx',\n",
-       "       'MesoscopeDevelopment', 'VisBehViralDev',\n",
-       "       'VisualBehaviorMultiscope4areasx2d', 'VisualBehaviorDevelopment',\n",
-       "       'VisualBehaviorIntegrationTest', 'DevelopmentMultiscope4areasx2d'],\n",
-       "      dtype=object)"
+       "array(['VisualBehaviorIntegrationTest', 'VisBIntTestDatacube',\n",
+       "       'VisualBehavior', 'MesoscopeDevelopment',\n",
+       "       'VisualBehaviorDevelopment', 'VisualBehaviorMultiscope',\n",
+       "       'VisBehViralDev', 'VisualBehaviorTask1B', 'VisBehNeuroModAx',\n",
+       "       'DevelopmentMultiscope4areasx2d',\n",
+       "       'VisualBehaviorMultiscope4areasx2d'], dtype=object)"
       ]
      },
      "execution_count": 3,
@@ -98,13 +91,6 @@
    "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Getting all ophys sessions. This might take a while.\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -381,7 +367,7 @@
    "source": [
     "Let's analyze the most recent passed experiment for the Visual Behavior project.\n",
     "\n",
-    "Note that the session data will not be downloaded to your local machine. However, the time this ID was last accessed will be recorded in the analysis log (in seconds since epoch)."
+    "Note that the session data will not be downloaded to your local machine."
    ]
   },
   {
@@ -424,7 +410,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/kat/code/AllenSDK/allensdk/brain_observatory/sync_dataset.py:109: UserWarning: The loaded sync file contains the following deprecated line label keys: {'cam2_exposure', 'cam1_exposure'}. Consider updating the sync file line labels.\n",
+      "/home/kat/code/AllenSDK/allensdk/brain_observatory/sync_dataset.py:109: UserWarning: The loaded sync file contains the following deprecated line label keys: {'cam1_exposure', 'cam2_exposure'}. Consider updating the sync file line labels.\n",
       "  self._check_line_labels()\n",
       "WARNING:root:Could not find valid lines for the following data sources\n",
       "WARNING:root:acquiring (valid line label(s) = ['2p_acquiring']\n"
@@ -511,13 +497,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:BehaviorProjectLimsApi:Getting behavior-only session data. This might take a while...\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -541,11 +520,13 @@
        "      <th>ophys_session_id</th>\n",
        "      <th>behavior_training_id</th>\n",
        "      <th>equipment_name</th>\n",
+       "      <th>date_of_acquisition</th>\n",
        "      <th>donor_id</th>\n",
        "      <th>full_genotype</th>\n",
        "      <th>reporter_line</th>\n",
        "      <th>driver_line</th>\n",
        "      <th>sex</th>\n",
+       "      <th>age_in_days</th>\n",
        "      <th>foraging_id</th>\n",
        "      <th>session_type</th>\n",
        "    </tr>\n",
@@ -561,73 +542,85 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>846710859</th>\n",
-       "      <td>846605051.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>CAM2P.4</td>\n",
-       "      <td>814111925</td>\n",
-       "      <td>Slc17a7-IRES2-Cre/wt;Camk2a-tTA/wt;Ai94(TITL-G...</td>\n",
-       "      <td>[Ai94(TITL-GCaMP6s)]</td>\n",
-       "      <td>[Camk2a-tTA, Slc17a7-IRES2-Cre]</td>\n",
-       "      <td>F</td>\n",
-       "      <td>b183a85b-6a29-4054-9d3c-915a0408a10a</td>\n",
-       "      <td>OPHYS_5_images_B_passive</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>820627398</th>\n",
+       "      <th>1025577299</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>MESO.1</td>\n",
-       "      <td>703198154</td>\n",
-       "      <td>Slc17a7-IRES2-Cre/wt;Camk2a-tTA/wt;Ai93(TITL-G...</td>\n",
-       "      <td>[Ai93(TITL-GCaMP6f)]</td>\n",
-       "      <td>[Camk2a-tTA, Slc17a7-IRES2-Cre]</td>\n",
-       "      <td>M</td>\n",
-       "      <td>e3bc6a4b-3477-41bc-966b-ef8e3d35b6cd</td>\n",
-       "      <td>OPHYS_1_images_A</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>767197943</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>CAM2P.3</td>\n",
-       "      <td>642238406</td>\n",
-       "      <td>Slc17a7-IRES2-Cre/wt;Ai162(TIT2L-GC6s-ICL-tTA2...</td>\n",
-       "      <td>[Ai162(TIT2L-GC6s-ICL-tTA2)]</td>\n",
-       "      <td>[Slc17a7-IRES2-Cre]</td>\n",
-       "      <td>M</td>\n",
-       "      <td>7a1d6674-df2c-53e7-ad85-9065a520634d</td>\n",
-       "      <td>0_gratings_autorewards_15min</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>768638583</th>\n",
-       "      <td>768434190.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>CAM2P.4</td>\n",
-       "      <td>703210569</td>\n",
+       "      <td>BEH.G</td>\n",
+       "      <td>2020-05-22 10:59:31.582</td>\n",
+       "      <td>1009380968</td>\n",
        "      <td>Slc17a7-IRES2-Cre/wt;Camk2a-tTA/wt;Ai93(TITL-G...</td>\n",
        "      <td>[Ai93(TITL-GCaMP6f)]</td>\n",
        "      <td>[Camk2a-tTA, Slc17a7-IRES2-Cre]</td>\n",
        "      <td>F</td>\n",
-       "      <td>cf1769ef-623e-4bb9-a698-a82986e91727</td>\n",
-       "      <td>5_images_a_ophys</td>\n",
+       "      <td>144.0</td>\n",
+       "      <td>745c1381-edf0-4b79-9a1e-d3673391625f</td>\n",
+       "      <td>TRAINING_0_gratings_autorewards_15min</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>768879508</th>\n",
+       "      <th>1026191301</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>CAM2P.3</td>\n",
-       "      <td>642238406</td>\n",
-       "      <td>Slc17a7-IRES2-Cre/wt;Ai162(TIT2L-GC6s-ICL-tTA2...</td>\n",
-       "      <td>[Ai162(TIT2L-GC6s-ICL-tTA2)]</td>\n",
-       "      <td>[Slc17a7-IRES2-Cre]</td>\n",
+       "      <td>BEH.G</td>\n",
+       "      <td>2020-05-26 08:58:13.163</td>\n",
+       "      <td>1009380968</td>\n",
+       "      <td>Slc17a7-IRES2-Cre/wt;Camk2a-tTA/wt;Ai93(TITL-G...</td>\n",
+       "      <td>[Ai93(TITL-GCaMP6f)]</td>\n",
+       "      <td>[Camk2a-tTA, Slc17a7-IRES2-Cre]</td>\n",
+       "      <td>F</td>\n",
+       "      <td>148.0</td>\n",
+       "      <td>fa22fd0f-da65-46cf-9f62-5aff6e4e279c</td>\n",
+       "      <td>TRAINING_1_gratings</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1025578252</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>BEH.G</td>\n",
+       "      <td>2020-05-22 11:01:50.612</td>\n",
+       "      <td>1009970291</td>\n",
+       "      <td>Sst-IRES-Cre/wt;Ai32(RCL-ChR2(H134R)_EYFP)/wt</td>\n",
+       "      <td>[Ai32(RCL-ChR2(H134R)_EYFP)]</td>\n",
+       "      <td>[Sst-IRES-Cre]</td>\n",
        "      <td>M</td>\n",
-       "      <td>3e2e0696-70f9-5839-888a-a90668e66a4d</td>\n",
-       "      <td>1_gratings</td>\n",
+       "      <td>139.0</td>\n",
+       "      <td>628c5e63-4666-4d15-a925-d4c294eafc18</td>\n",
+       "      <td>TRAINING_0_gratings_autorewards_15min_0uL_reward</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1025578250</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>BEH.G</td>\n",
+       "      <td>2020-05-22 11:04:28.358</td>\n",
+       "      <td>1009971263</td>\n",
+       "      <td>Vip-IRES-Cre/wt;Ai32(RCL-ChR2(H134R)_EYFP)/wt</td>\n",
+       "      <td>[Ai32(RCL-ChR2(H134R)_EYFP)]</td>\n",
+       "      <td>[Vip-IRES-Cre]</td>\n",
+       "      <td>M</td>\n",
+       "      <td>136.0</td>\n",
+       "      <td>c904dc6e-8b00-4ae5-9224-95fb99255b89</td>\n",
+       "      <td>TRAINING_0_gratings_autorewards_15min_0uL_reward</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1026191305</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>BEH.G</td>\n",
+       "      <td>2020-05-26 08:59:27.091</td>\n",
+       "      <td>1009970291</td>\n",
+       "      <td>Sst-IRES-Cre/wt;Ai32(RCL-ChR2(H134R)_EYFP)/wt</td>\n",
+       "      <td>[Ai32(RCL-ChR2(H134R)_EYFP)]</td>\n",
+       "      <td>[Sst-IRES-Cre]</td>\n",
+       "      <td>M</td>\n",
+       "      <td>143.0</td>\n",
+       "      <td>3a3df2d1-a2a6-479c-b77f-a864bf6ac99b</td>\n",
+       "      <td>TRAINING_1_gratings_10uL_reward</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -636,59 +629,59 @@
       "text/plain": [
        "                     ophys_session_id  behavior_training_id equipment_name  \\\n",
        "behavior_session_id                                                          \n",
-       "846710859                 846605051.0                   NaN        CAM2P.4   \n",
-       "820627398                         NaN                   NaN         MESO.1   \n",
-       "767197943                         NaN                   NaN        CAM2P.3   \n",
-       "768638583                 768434190.0                   NaN        CAM2P.4   \n",
-       "768879508                         NaN                   NaN        CAM2P.3   \n",
+       "1025577299                        NaN                   NaN          BEH.G   \n",
+       "1026191301                        NaN                   NaN          BEH.G   \n",
+       "1025578252                        NaN                   NaN          BEH.G   \n",
+       "1025578250                        NaN                   NaN          BEH.G   \n",
+       "1026191305                        NaN                   NaN          BEH.G   \n",
        "\n",
-       "                      donor_id  \\\n",
-       "behavior_session_id              \n",
-       "846710859            814111925   \n",
-       "820627398            703198154   \n",
-       "767197943            642238406   \n",
-       "768638583            703210569   \n",
-       "768879508            642238406   \n",
+       "                         date_of_acquisition    donor_id  \\\n",
+       "behavior_session_id                                        \n",
+       "1025577299           2020-05-22 10:59:31.582  1009380968   \n",
+       "1026191301           2020-05-26 08:58:13.163  1009380968   \n",
+       "1025578252           2020-05-22 11:01:50.612  1009970291   \n",
+       "1025578250           2020-05-22 11:04:28.358  1009971263   \n",
+       "1026191305           2020-05-26 08:59:27.091  1009970291   \n",
        "\n",
        "                                                         full_genotype  \\\n",
        "behavior_session_id                                                      \n",
-       "846710859            Slc17a7-IRES2-Cre/wt;Camk2a-tTA/wt;Ai94(TITL-G...   \n",
-       "820627398            Slc17a7-IRES2-Cre/wt;Camk2a-tTA/wt;Ai93(TITL-G...   \n",
-       "767197943            Slc17a7-IRES2-Cre/wt;Ai162(TIT2L-GC6s-ICL-tTA2...   \n",
-       "768638583            Slc17a7-IRES2-Cre/wt;Camk2a-tTA/wt;Ai93(TITL-G...   \n",
-       "768879508            Slc17a7-IRES2-Cre/wt;Ai162(TIT2L-GC6s-ICL-tTA2...   \n",
+       "1025577299           Slc17a7-IRES2-Cre/wt;Camk2a-tTA/wt;Ai93(TITL-G...   \n",
+       "1026191301           Slc17a7-IRES2-Cre/wt;Camk2a-tTA/wt;Ai93(TITL-G...   \n",
+       "1025578252               Sst-IRES-Cre/wt;Ai32(RCL-ChR2(H134R)_EYFP)/wt   \n",
+       "1025578250               Vip-IRES-Cre/wt;Ai32(RCL-ChR2(H134R)_EYFP)/wt   \n",
+       "1026191305               Sst-IRES-Cre/wt;Ai32(RCL-ChR2(H134R)_EYFP)/wt   \n",
        "\n",
        "                                    reporter_line  \\\n",
        "behavior_session_id                                 \n",
-       "846710859                    [Ai94(TITL-GCaMP6s)]   \n",
-       "820627398                    [Ai93(TITL-GCaMP6f)]   \n",
-       "767197943            [Ai162(TIT2L-GC6s-ICL-tTA2)]   \n",
-       "768638583                    [Ai93(TITL-GCaMP6f)]   \n",
-       "768879508            [Ai162(TIT2L-GC6s-ICL-tTA2)]   \n",
+       "1025577299                   [Ai93(TITL-GCaMP6f)]   \n",
+       "1026191301                   [Ai93(TITL-GCaMP6f)]   \n",
+       "1025578252           [Ai32(RCL-ChR2(H134R)_EYFP)]   \n",
+       "1025578250           [Ai32(RCL-ChR2(H134R)_EYFP)]   \n",
+       "1026191305           [Ai32(RCL-ChR2(H134R)_EYFP)]   \n",
        "\n",
-       "                                         driver_line sex  \\\n",
-       "behavior_session_id                                        \n",
-       "846710859            [Camk2a-tTA, Slc17a7-IRES2-Cre]   F   \n",
-       "820627398            [Camk2a-tTA, Slc17a7-IRES2-Cre]   M   \n",
-       "767197943                        [Slc17a7-IRES2-Cre]   M   \n",
-       "768638583            [Camk2a-tTA, Slc17a7-IRES2-Cre]   F   \n",
-       "768879508                        [Slc17a7-IRES2-Cre]   M   \n",
+       "                                         driver_line sex  age_in_days  \\\n",
+       "behavior_session_id                                                     \n",
+       "1025577299           [Camk2a-tTA, Slc17a7-IRES2-Cre]   F        144.0   \n",
+       "1026191301           [Camk2a-tTA, Slc17a7-IRES2-Cre]   F        148.0   \n",
+       "1025578252                            [Sst-IRES-Cre]   M        139.0   \n",
+       "1025578250                            [Vip-IRES-Cre]   M        136.0   \n",
+       "1026191305                            [Sst-IRES-Cre]   M        143.0   \n",
        "\n",
        "                                              foraging_id  \\\n",
        "behavior_session_id                                         \n",
-       "846710859            b183a85b-6a29-4054-9d3c-915a0408a10a   \n",
-       "820627398            e3bc6a4b-3477-41bc-966b-ef8e3d35b6cd   \n",
-       "767197943            7a1d6674-df2c-53e7-ad85-9065a520634d   \n",
-       "768638583            cf1769ef-623e-4bb9-a698-a82986e91727   \n",
-       "768879508            3e2e0696-70f9-5839-888a-a90668e66a4d   \n",
+       "1025577299           745c1381-edf0-4b79-9a1e-d3673391625f   \n",
+       "1026191301           fa22fd0f-da65-46cf-9f62-5aff6e4e279c   \n",
+       "1025578252           628c5e63-4666-4d15-a925-d4c294eafc18   \n",
+       "1025578250           c904dc6e-8b00-4ae5-9224-95fb99255b89   \n",
+       "1026191305           3a3df2d1-a2a6-479c-b77f-a864bf6ac99b   \n",
        "\n",
-       "                                     session_type  \n",
-       "behavior_session_id                                \n",
-       "846710859                OPHYS_5_images_B_passive  \n",
-       "820627398                        OPHYS_1_images_A  \n",
-       "767197943            0_gratings_autorewards_15min  \n",
-       "768638583                        5_images_a_ophys  \n",
-       "768879508                              1_gratings  "
+       "                                                         session_type  \n",
+       "behavior_session_id                                                    \n",
+       "1025577299                      TRAINING_0_gratings_autorewards_15min  \n",
+       "1026191301                                        TRAINING_1_gratings  \n",
+       "1025578252           TRAINING_0_gratings_autorewards_15min_0uL_reward  \n",
+       "1025578250           TRAINING_0_gratings_autorewards_15min_0uL_reward  \n",
+       "1026191305                            TRAINING_1_gratings_10uL_reward  "
       ]
      },
      "execution_count": 8,
@@ -708,7 +701,7 @@
    "source": [
     "Let's take a look at one behavior session.\n",
     "\n",
-    "Note that when accessing behavior data using `get_behavior_session_data`, different data sources may be used than when using `get_session_data` for shared attributes. In addition, there may also be some changes to how the data are processed. For example, when examining the stimulus presentations for a behavior session, there is no correction for monitor delay (unlike for ophys sessions). Behavior sessions also use lower temporal resolution lick monitors than ophys sessions.\n",
+    "Note that when accessing behavior data using `get_behavior_session_data`, different data sources may be used than when using `get_session_data` for shared attributes. In addition, there may also be some changes to how the data are processed. For example, when examining the stimulus presentations for a behavior session, there is no correction for monitor delay (unlike for ophys sessions).\n",
     "\n",
     "Please see the documentation for additional details."
    ]
@@ -807,9 +800,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.6 64-bit ('allensdk-test': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37664bitallensdktestcondafa15a5a5c1dd4566a620e98fd842e963"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -821,7 +814,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
