Replace _get_rf() method calls with get_receptive_field()

--- a/doc_template/examples_root/examples/nb/ecephys_receptive_fields.ipynb
+++ b/doc_template/examples_root/examples/nb/ecephys_receptive_fields.ipynb
@@ -698,9 +698,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, calculating the receptive field is as simple as calling `_get_rf()` with a unit ID as the input argument.\n",
-    "\n",
-    "**NOTE:** We are planning to change this method to `get_receptive_field()` in a future SDK release."
+    "Now, calculating the receptive field is as simple as calling `get_receptive_field()` with a unit ID as the input argument."
    ]
   },
   {
@@ -712,13 +710,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/nicholas.mei/miniconda3/envs/allensdk/lib/python3.7/site-packages/allensdk/brain_observatory/ecephys/ecephys_session.py:637: UserWarning: You've specified some overlapping time intervals between neighboring rows: [(0, 1)], with a maximum overlap of 0.015479378234388719 seconds.\n",
+      "/home/nicholas.mei/miniconda3/envs/allensdk/lib/python3.7/site-packages/allensdk/brain_observatory/ecephys/ecephys_session.py:647: UserWarning: You've specified some overlapping time intervals between neighboring rows: [(0, 1)], with a maximum overlap of 0.015479378234388719 seconds.\n",
       "  warnings.warn(f\"You've specified some overlapping time intervals between neighboring rows: {overlapping}, \"\n"
      ]
     }
    ],
    "source": [
-    "RF = rf_mapping._get_rf(v1_units.index.values[3])"
+    "RF = rf_mapping.get_receptive_field(v1_units.index.values[3])"
    ]
   },
   {
@@ -783,7 +781,7 @@
    ],
    "source": [
     "def plot_rf(unit_id, index):\n",
-    "    RF = rf_mapping._get_rf(unit_id)\n",
+    "    RF = rf_mapping.get_receptive_field(unit_id)\n",
     "    _ = plt.subplot(6,10,index+1)\n",
     "    _ = plt.imshow(RF)\n",
     "    _ = plt.axis('off')\n",
